@@ -8,7 +8,7 @@ import com.fintex.ce.model.domain.enumeration.ParameterType;
 import com.fintex.ce.model.domain.holding.PortfolioHolding;
 import com.fintex.ce.model.domain.result.fee.AverageMerResult;
 import com.fintex.ce.model.dto.command.AverageMerCommand;
-import com.fintex.ce.model.error.Notification;
+import com.fintex.ce.model.error.PceExceptionCollector;
 import com.fintex.ce.model.error.Warning;
 import com.fintex.ce.port.webclient.sm.SecurityDataFetcher;
 import com.fintex.wm.commons.domain.enumeration.FinancialInstrumentType;
@@ -21,19 +21,18 @@ import java.util.List;
 import java.util.Map;
 import java.util.Objects;
 import java.util.Optional;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 import lombok.RequiredArgsConstructor;
 
 import static com.fintex.ce.model.domain.enumeration.ParameterType.ABSOLUTE;
 import static com.fintex.ce.model.domain.enumeration.ParameterType.FORCE_REPORT_FEE;
 import static com.fintex.ce.model.domain.enumeration.ParameterType.SCALED;
-import static com.fintex.ce.model.error.ErrorCode.ERR_MER_MERMF_001;
-import static com.fintex.ce.model.error.ErrorCode.ERR_MER_NERGER_001;
-import static com.fintex.ce.model.error.ErrorCode.WRN_MER_AMF_001;
-import static com.fintex.ce.model.error.ErrorCode.WRN_MER_GER_001;
-import static com.fintex.ce.model.error.ErrorCode.WRN_MER_MER_001;
-import static com.fintex.ce.model.error.ErrorCode.WRN_MER_NER_001;
+import static com.fintex.ce.model.error.ErrorCode.MISSING_ACTUAL_MANAGEMENT_FEE;
+import static com.fintex.ce.model.error.ErrorCode.MISSING_GROSS_EXPENSE_RATIO;
+import static com.fintex.ce.model.error.ErrorCode.MISSING_MANAGEMENT_EXPENSE_RATIO;
+import static com.fintex.ce.model.error.ErrorCode.MISSING_MER_AND_MANAGEMENT_FEE;
+import static com.fintex.ce.model.error.ErrorCode.MISSING_NER_AND_GER;
+import static com.fintex.ce.model.error.ErrorCode.MISSING_NET_EXPENSE_RATIO;
 import static com.fintex.ce.util.FilterUtils.getSpecifiedIfEmpty;
 
 @Service
@@ -76,12 +75,12 @@ public class MERCalculationServiceImpl extends AverageManagementExpenseCalculati
   @Override
   public List<Warning> setInitialFeeAndModifiedFeeValues(
       final Map<FinancialInstrumentType, Map<PortfolioHolding, AverageManagementExpenseCalculation>> groupOfMers) {
-    var notification = new Notification();
     // TODO TMI-369: refactor this logic. Many types are/were simply not handled in the initial impl.
     // Therefore we must investigate:
     // If we should only that the specific children types like MUTUAL_FUND_CANADA or also allow just FUND?
     // What processing logic must happen for each type?
     // This requires more detailed info on calculation logic.
+    PceExceptionCollector collector = new PceExceptionCollector();
     List<Warning> warnings = groupOfMers.entrySet().stream()
         .flatMap(entry -> {
           FinancialInstrumentType holdingType = entry.getKey();
@@ -90,45 +89,46 @@ public class MERCalculationServiceImpl extends AverageManagementExpenseCalculati
               || FinancialInstrumentType.SEGREGATED_FUND_CANADA.equals(holdingType)
               || FinancialInstrumentType.HEDGE_FUND_CANADA.equals(holdingType)) {
             return entry.getValue().entrySet().stream()
-                .map(e -> handleFeeDataForCanadaMutualHedgeFundsAndEtf(e.getValue(), e.getKey(), notification))
+                .map(e -> collector.tryCatch(() -> handleFeeDataForCanadaMutualHedgeFundsAndEtf(e.getValue(), e
+                    .getKey())))
+                .filter(Objects::nonNull)
                 .flatMap(Optional::stream)
                 .flatMap(Collection::stream);
           } else
             if (FinancialInstrumentType.ETF_US.equals(holdingType)
                 || FinancialInstrumentType.MUTUAL_FUND_US.equals(holdingType)) {
                   return entry.getValue().entrySet().stream()
-                      .map(e -> handleFeeDataForUsEtfAndMutualFund(e.getValue(), e.getKey(), notification))
+                      .map(e -> collector.tryCatch(() -> handleFeeDataForUsEtfAndMutualFund(e.getValue(), e.getKey())))
+                      .filter(Objects::nonNull)
                       .flatMap(Optional::stream);
                 }
           return Stream.empty();
         })
-        .collect(Collectors.toList());
-
-    notification.ifAnyErrorThrowException();
+        .toList();
+    collector.throwIfAny();
     return warnings;
   }
 
   public Optional<List<Warning>> handleFeeDataForCanadaMutualHedgeFundsAndEtf(
       AverageManagementExpenseCalculation averageManagementExpenseCalculationDTO,
-      PortfolioHolding holding,
-      Notification notification) {
+      PortfolioHolding holding) {
     if (Objects.isNull(averageManagementExpenseCalculationDTO.getManagementExpenseRatio()) &&
         Objects.isNull(averageManagementExpenseCalculationDTO.getActualManagementFee())) {
       if (FinancialInstrumentType.HEDGE_FUND_CANADA.equals(holding.getHoldingType())) {
         setFeeValues(averageManagementExpenseCalculationDTO, averageManagementExpenseCalculationDTO
             .getManagementExpenseRatio());
-        return Optional.of(List.of(WRN_MER_MER_001.warning(holding), WRN_MER_AMF_001.warning(holding)));
-      } else {
-        notification.addError(ERR_MER_MERMF_001.error(holding));
+        return Optional.of(List.of(MISSING_MANAGEMENT_EXPENSE_RATIO.warning(holding),
+            MISSING_ACTUAL_MANAGEMENT_FEE.warning(holding)));
       }
+      throw MISSING_MER_AND_MANAGEMENT_FEE.toExceptionForHolding(holding);
     } else if (Objects.isNull(averageManagementExpenseCalculationDTO.getManagementExpenseRatio())) {
       setFeeValues(averageManagementExpenseCalculationDTO, averageManagementExpenseCalculationDTO
           .getActualManagementFee());
-      return Optional.of(List.of(WRN_MER_MER_001.warning(holding)));
+      return Optional.of(List.of(MISSING_MANAGEMENT_EXPENSE_RATIO.warning(holding)));
     } else if (Objects.isNull(averageManagementExpenseCalculationDTO.getActualManagementFee())) {
       setFeeValues(averageManagementExpenseCalculationDTO, averageManagementExpenseCalculationDTO
           .getManagementExpenseRatio());
-      return Optional.of(List.of(WRN_MER_AMF_001.warning(holding)));
+      return Optional.of(List.of(MISSING_ACTUAL_MANAGEMENT_FEE.warning(holding)));
     }
     setFeeValues(averageManagementExpenseCalculationDTO, averageManagementExpenseCalculationDTO
         .getManagementExpenseRatio());
@@ -137,18 +137,17 @@ public class MERCalculationServiceImpl extends AverageManagementExpenseCalculati
 
   public Optional<Warning> handleFeeDataForUsEtfAndMutualFund(
       AverageManagementExpenseCalculation averageManagementExpenseCalculationDTO,
-      PortfolioHolding holding,
-      Notification notification) {
+      PortfolioHolding holding) {
     if (Objects.isNull(averageManagementExpenseCalculationDTO.getNetExpenseRatio()) &&
         Objects.isNull(averageManagementExpenseCalculationDTO.getGrossExpenseRatio())) {
-      notification.addError(ERR_MER_NERGER_001.error(holding));
+      throw MISSING_NER_AND_GER.toExceptionForHolding(holding);
     } else if (Objects.isNull(averageManagementExpenseCalculationDTO.getNetExpenseRatio())) {
       setFeeValues(averageManagementExpenseCalculationDTO, averageManagementExpenseCalculationDTO
           .getGrossExpenseRatio());
-      return Optional.of(WRN_MER_NER_001.warning(holding));
+      return Optional.of(MISSING_NET_EXPENSE_RATIO.warning(holding));
     } else if (Objects.isNull(averageManagementExpenseCalculationDTO.getGrossExpenseRatio())) {
       setFeeValues(averageManagementExpenseCalculationDTO, averageManagementExpenseCalculationDTO.getNetExpenseRatio());
-      return Optional.of(WRN_MER_GER_001.warning(holding));
+      return Optional.of(MISSING_GROSS_EXPENSE_RATIO.warning(holding));
     }
     setFeeValues(averageManagementExpenseCalculationDTO, averageManagementExpenseCalculationDTO.getNetExpenseRatio());
     return Optional.empty();
